--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <body>
   <script data-main="js/app.js" src="js/lib/require.js"></script>
-  <svg height="100%" width="100%" id="cooker" />
+  <div id="cookerPlaceholder"></div>
+  <!--svg height="100%" width="100%" id="cooker" -->
 </body>
 
 </html>
