--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 
 <body>
   <script data-main="js/app.js" src="js/lib/require.js"></script>
-  <div id="test1"></div>
-  <div id="test2"></div>
-  <svg id="test3" width='100' height='100'></svg>
-  <svg id="test4" width='100' height='100'></svg>
-  <svg id="test5" width='300' height='300'></svg>
+  <svg id="svg" width='500' height='500'></svg>
 </body>
 
 </html>
