--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <body>
   <script data-main="js/app.js" src="js/lib/require.js"></script>
-  <svg id="svg" width='500' height='500'></svg>
+  <svg id="svg" width='100%' height='100%'></svg>
 </body>
 
 </html>
