--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <html>
 
+<head>
+  <style>
+    g {
+      shape-rendering: auto;
+    }
+  </style>
+</head>
+
 <body>
   <script data-main="js/app.js" src="js/lib/require.js"></script>
   <svg id="svg" width='100%' height='100%'></svg>
