removing a workaround from the Diagram and cleaning some names

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </style>
 </head>
 
-<body>
+<body style='margin: 0px;'>
   <script data-main="js/app.js" src="js/lib/require.js"></script>
   <svg id="svg" width='100%' height='100%'></svg>
 </body>
