--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -11,30 +11,10 @@
   <script src="js/lib/jasmine-2.1.3/jasmine-html.js"></script>
   <script src="js/lib/jasmine-2.1.3/boot.js"></script>
   
-  <script type="text/javascript" src="js/lib/require.js"></script>
-  
-  <script type="text/javascript">
-    require(
-        [
-            "js/lib/domReady!",
-            "js/specs/stateSpec"
-        ],
-        function( document ){
-            // Set up the HTML reporter - this is reponsible for
-            // aggregating the results reported by Jasmine as the
-            // tests and suites are executed.
-            jasmine.getEnv().addReporter(
-                new jasmine.HtmlReporter()
-            );
-            // Run all the loaded test specs.
-            jasmine.getEnv().execute();
-
-        }
-    );
-  </script>
-
+  <script data-main="js/specs" src="js/lib/require.js"></script>
 </head>
 
 <body>
 </body>
+
 </html>
