New settings for blanket

--- a/specRunnerWithCoverage.html
+++ b/specRunnerWithCoverage.html
@@ -13,7 +13,11 @@
   
   <script data-main="js/specs" src="js/lib/require.js"></script>
   
-  <script src="js/node_modules/blanket/src/blanket.js" data-cover-only="app\/core.js"></script>
+  <script type="text/javascript" 
+        data-cover-only="/js" 
+        data-cover-never="['/lib','/spec']" 
+        data-cover-flags="branchTracking"
+        src="js/node_modules/blanket/src/blanket.js"></script>
   <script src="js/node_modules/blanket/dist/jasmine/blanket_jasmine.js"></script>
   
 </head>
