Blanket is working

--- a/specRunnerWithCoverage.html
+++ b/specRunnerWithCoverage.html
@@ -13,13 +13,8 @@
   
   <script data-main="js/specs" src="js/lib/require.js"></script>
   
-  <script type="text/javascript" 
-        data-cover-only="/js" 
-        data-cover-never="['/lib','/spec']" 
-        data-cover-flags="branchTracking"
-        src="js/node_modules/blanket/src/blanket.js"></script>
+  <script type="text/javascript" <!--data-cover-only="///(js\/lib\/\\.\\.\/app)/" data-cover-flags="debug"--> src="js/node_modules/blanket/src/blanket.js"></script>
   <script src="js/node_modules/blanket/dist/jasmine/blanket_jasmine.js"></script>
-  
 </head>
 
 <body>
