--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 
 <body style='margin: 0px;'>
   <script data-main="js/app.js" src="js/lib/require.js"></script>
-  <svg id="svg" width='100%' height='100%'></svg>
+  
+  <table height="100%">
+    <tr>
+      <td style="padding: 0px;" width="80%"><svg id="mainDiagramSvg" width='100%' height='100%'></svg></td>
+      <td style="padding: 0px;" width="20%"><svg id="checkpointTreeSvg  " width='100%' height='100%'></svg></td>
+    </tr>
+  </table>
+  
 </body>
 
 </html>
