--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   
   <table height="100%">
     <tr>
-      <td style="padding: 0px;" width="80%"><svg id="mainDiagramSvg" width='100%' height='100%'></svg></td>
-      <td style="padding: 0px;" width="20%"><svg id="checkpointTreeSvg" width='100%' height='100%'></svg></td>
+      <td style="padding: 0px;" width="80%"><svg id="mainDiagramSvg" width="100%" height="100%" cursor="default"></svg></td>
+      <td style="padding: 0px;" width="20%"><svg id="checkpointTreeSvg" width="100%" height="100%" cursor="default"></svg></td>
     </tr>
   </table>
   
