--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
   </style>
 </head>
 
-<body style='margin: 0px;'>
+<body width="100%" height="100%" style='margin: 0px;'>
   <script data-main="js/app.js" src="js/lib/require.js"></script>
-  
-  <table height="100%">
+
+  <table width="100%" height="100%">
     <tr>
-      <td style="padding: 0px;" width="80%"><svg id="mainDiagramSvg" width="100%" height="100%" cursor="default"></svg></td>
-      <td style="padding: 0px;" width="20%"><svg id="checkpointTreeSvg" width="100%" height="100%" cursor="default"></svg></td>
+      <td style="padding: 0px;" width="60%">
+        <svg id="mainDiagramSvg" width="100%" height="100%" cursor="default"></svg>
+      </td>
+      <td style="padding: 0px;" width="40%">
+        <svg id="checkpointTreeSvg" width="100%" height="100%" cursor="default"></svg>
+      </td>
     </tr>
   </table>
-  
+
 </body>
 
 </html>
