--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <html>
 
 <head>
-  <style>
-    g {
-      shape-rendering: auto;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body width="100%" height="100%" style='margin: 0px;'>
