--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
       </td>
     </tr>
   </table>
+  
+  <svg id="hiddenFilterHolder" width="0" height="0">
+    <defs>
+      <filter id="paletteItemFilter" x="0" y="0">
+        <feGaussianBlur in="SourceGraphic" stdDeviation="5" />
+      </filter>
+    </defs>
+  </svg>
 
 </body>
 </html>
