--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
       </td>
     </tr>
   </table>
+  
+  <svg id="hiddenFilterPlaceholder" width="0" height="0">
+    <!-- This filter needs to be in the same file, otherwise it's not working in Chrome -->
+    <!-- This filter is not working in Firefox, so make sure to be added first in the CSS before all other "filter:" temptatives -->
+    <defs>
+        <filter id="grayscaleFilter">
+            <feColorMatrix type="matrix" values="0.3333 0.3333 0.3333 0 0
+ 0.3333 0.3333 0.3333 0 0
+ 0.3333 0.3333 0.3333 0 0
+ 0  0  0  1 0"/>
+        </filter>
+    </defs>
+</svg>
 
 </body>
 </html>
